--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,9 @@
     "license": "MIT",
     "require": {
         "php": "^8.2",
-        "filament/filament": "3.3",
+        "bezhansalleh/filament-shield": "*",
+        "filament/filament": "^3.3",
+        "filament/forms": "^3.3",
         "laravel/framework": "^12.0",
         "laravel/tinker": "^2.10.1",
         "spatie/laravel-permission": "^6.21"
